--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Noah's Personal Site</title>
   </head>
-  <body>
+  <body style="background-color: powderblue;"> 
     <table cellspacing=20>
       <tr>
         <td><img src="TuckHalloween.jpeg" alt="Dog Debra Messing"></td>
